--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<p>Hello, my name is John! Bacon ipsum dolor amet short ribs prosciutto strip steak, pig ham tongue buffalo beef ribs hamburger pork venison. </p>
 	</div>
 	<div id="buttons">
-		<input type="button" onclick="https://github.com/chaitanyarahalkar">Follow</button>
-		<button id="msg" onclick="mailto:chaitanyarahalkar4@gmail.com">Email</button>
+		<input type="button" onclick="https://github.com/chaitanyarahalkar">Follow</input>
+		<input type="button" id="msg" onclick="mailto:chaitanyarahalkar4@gmail.com">Email</input>
 	</div>
 </div>
 
