--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<img id="avatar" src="https://drive.google.com/uc?id=1EVA3KUBLxCXF2EGmTf4LUB8F4yAvBrjl"></img>
 	</div>
 	<div id="bio">
-		<p>Hello, my name is John! Bacon ipsum dolor amet short ribs prosciutto strip steak, pig ham tongue buffalo beef ribs hamburger pork venison. </p>
+		<p>I am a programming enthusiast pursuing computer engineering in my third year at Pune Institute of Computer Technology. My prime areas of focus are cybersecurity & deep learning. I am a FOSS guy, passionate primarily about Linux. You can find me hanging out on GitHub, contributing to awesome open-source projects.</p>
 	</div>
 	<div id="buttons">
-		<input type="button" onclick="https://github.com/chaitanyarahalkar">Follow</input>
-		<input type="button" id="msg" onclick="mailto:chaitanyarahalkar4@gmail.com">Email</input>
+		<button><a href="https://github.com/chaitanyarahalkar">GitHub</a></button>
+		<button id="msg"><a href="mailto:chaitanyarahalkar4@gmail.com">Email</a></button>
 	</div>
 </div>
 
@@ -30,25 +30,26 @@
 		<img id="avatar" src="https://drive.google.com/uc?id=1EVA3KUBLxCXF2EGmTf4LUB8F4yAvBrjl"></img>
 	</div>
 	<div id="bio">
-		<p>Hello, my name is John! Bacon ipsum dolor amet short ribs prosciutto strip steak, pig ham tongue buffalo beef ribs hamburger pork venison. </p>
+		<p>I'm a Computer Engineer in the making and a Tech enthusiast at heart. I love all things computer science and I often <a href="https://twitter.com/dhvlgjr">tweet</a> and talk about it. My areas of interest are Information Security and Networking.
+ 		</p>
 	</div>
 	<div id="buttons">
-		<button>Follow</button>
-		<button id="msg">Message</button>
+		<button><a href="https://github.com/dhavalgujar">GitHub</a></button>
+		<button id="msg"><a href="mailto:dhvlgjr@gmail.com">Email</a></button>
 	</div>
 </div>
 
 <div id="card">
 	<h1>Rajvardhan Oak</h1>
 	<div class="image-crop">
-		<img id="avatar" src="https://drive.google.com/uc?id=1EVA3KUBLxCXF2EGmTf4LUB8F4yAvBrjl"></img>
+		<img id="avatar" src="roak.png"></img>
 	</div>
 	<div id="bio">
-		<p>Hello, my name is John! Bacon ipsum dolor amet short ribs prosciutto strip steak, pig ham tongue buffalo beef ribs hamburger pork venison. </p>
+		<p> I am a second-year Masters in Information Management Systems (MIMS) Program at the School of Information at UC Berkeley. My areas of interest are Deep Learning, Machine Learning, AI and Security.</p>
 	</div>
 	<div id="buttons">
-		<button>Follow</button>
-		<button id="msg">Message</button>
+		<button><a href="https://github.com/rvoak">GitHub</a></button>
+		<button id="msg"><a href="mailto:rvoak@berkeley.edu">Email</a></button>
 	</div>
 </div>
   
