--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="card">
 	<h1>Dhaval Gujar</h1>
 	<div class="image-crop">
-		<img id="avatar" src="https://drive.google.com/uc?id=1EVA3KUBLxCXF2EGmTf4LUB8F4yAvBrjl"></img>
+		<img id="avatar" src="dhvl.png"></img>
 	</div>
 	<div id="bio">
 		<p>I'm a Computer Engineer in the making and a Tech enthusiast at heart. I love all things computer science and I often <a href="https://twitter.com/dhvlgjr">tweet</a> and talk about it. My areas of interest are Information Security and Networking.
