--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<img id="avatar" src="dhvl.png"></img>
 	</div>
 	<div id="bio">
-		<p>I'm a Computer Engineer in the making and a Tech enthusiast at heart. I love all things computer science and I often <a href="https://twitter.com/dhvlgjr">tweet</a> and talk about it. My areas of interest are Information Security and Networking.
+		<p>I'm a Computer Engineer in the making and a Tech enthusiast at heart. I love all things computer science and I often <a href="https://twitter.com/dhavalgujar">tweet</a> and talk about it. My areas of interest are Information Security and Networking.
  		</p>
 	</div>
 	<div id="buttons">
