--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="card">
 	<h1>Chaitanya Rahalkar</h1>
 	<div class="image-crop">
-		<img id="avatar" src="chaitanya.jpeg"></img>
+		<img id="avatar" src="chaitanya.jpg"></img>
 	</div>
 	<div id="bio">
 		<p>I am a programming enthusiast pursuing computer engineering in my third year at Pune Institute of Computer Technology. My prime areas of focus are cybersecurity & deep learning. I am a FOSS guy, passionate primarily about Linux. You can find me hanging out on GitHub, contributing to awesome open-source projects.</p>
